[package]
name = "moisens_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
libc = "0.2.132"
async-std = "1"
async-macros = "1"
lazy_static = "1"

[lib]
crate-type = ["cdylib"]
